cyclonedx-bom/src/specs/common/snapshots/cyclonedx_bom__specs__common__license__v1_4__test__it_should_write_licenses_without_license_choices_correctly.snap
---
source: cyclonedx-bom/src/specs/common/license.rs
assertion_line: 650
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<licenses />
