cyclonedx-bom/src/specs/common/snapshots/cyclonedx_bom__specs__common__license__v1_4__test__it_should_write_xml_full_license_choice_licenses.snap
---
source: cyclonedx-bom/src/specs/common/license.rs
assertion_line: 676
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<licenses>
  <license>
    <id>spdx id</id>
    <text content-type="content type" encoding="encoding">content</text>
    <url>url</url>
  </license>
  <license>
    <name>name</name>
    <text content-type="content type" encoding="encoding">content</text>
    <url>url</url>
  </license>
</licenses>
